updated config such that the database is created (if it doesn't exist already)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: demo-springboot-rest-hibernate-mysql
   datasource:
-    url: 'jdbc:mysql://localhost:3306/demo-springboot-rest-hibernate-mysql'
+    url: 'jdbc:mysql://localhost:3306/demo-springboot-rest-hibernate-mysql?createDatabaseIfNotExist=true'
     username: root
     password: password
   jpa:
     hibernate:
-      ddl-auto: create-drop # none/validate/update/create-drop
+      ddl-auto: update # none/validate/update/create-drop
     show-sql: false
